# Smart-Auto-Video-Annotation-for-Labeling-Data-for-Training-

./: .gitignore  Dockerfile  README.md  RESUME_ASSETS.md  ROADMAP.md  pyproject.toml  requirements.txt
src/: __init__.py  annotator.py  auto_labeler.py  detector.py  pipeline.py  quality.py  tracker.py  utils.py
tests/: conftest.py  test_annotator.py  test_detector.py  test_pipeline.py  test_tracker.py
