[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smart-auto-video-annotation"
version = "0.1.0"
description = "Automated video annotation with multi-object tracking for generating labeled training data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Farshid Pirahansiah", email = "farshid@pirahansiah.com" },
]
keywords = ["video-annotation", "object-detection", "multi-object-tracking", "yolo", "auto-labeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "opencv-python-headless>=4.13.0",
    "ultralytics>=8.3.0",
    "numpy>=1.26.0",
    "supervision>=0.22.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/pirahansiah/Smart-Auto-Video-Annotation-for-Labeling-Data-for-Training-"
Repository = "https://github.com/pirahansiah/Smart-Auto-Video-Annotation-for-Labeling-Data-for-Training-"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
